// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. caption without credits 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-paddingTop-m611by"
  >
    <div
      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
    >
      Some caption text goes in here
    </div>
  </div>
</div>
`;

exports[`2. caption with credits 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-paddingTop-m611by"
  >
    <div
      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
    >
      Some caption text goes in here
    </div>
    <div
      className="css-text-901oao r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`3. caption with credits only 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-paddingTop-m611by"
  >
    <div
      className="css-text-901oao r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`4. caption with child 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao"
  >
    Hello world!
  </div>
  <div
    className="css-view-1dbjc4n r-paddingTop-m611by"
  >
    <div
      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
    >
      Some caption text goes in here
    </div>
    <div
      className="css-text-901oao r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`5. centred caption without credits 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-paddingTop-m611by"
  >
    <div
      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      Some caption text goes in here
    </div>
  </div>
</div>
`;

exports[`6. centred caption caption with credits 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-paddingTop-m611by"
  >
    <div
      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      Some caption text goes in here
    </div>
    <div
      className="css-text-901oao r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`7. centred caption caption with credits only 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-paddingTop-m611by"
  >
    <div
      className="css-text-901oao r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`8. centred caption caption with child 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao"
  >
    Hello world!
  </div>
  <div
    className="css-view-1dbjc4n r-paddingTop-m611by"
  >
    <div
      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      Some caption text goes in here
    </div>
    <div
      className="css-text-901oao r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
      style={
        Object {
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;
